Added comments explaining functionality and some plans

--- a/uniquewords.ipynb
+++ b/uniquewords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,28 +15,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# from genericpath import isfile\n",
-    "# import os\n",
-    "\n",
-    "# #Driver metod. \n",
-    "# def handle_input(sysargs):\n",
-    "#     if (len(sysargs) == 1):\n",
-    "#         result = []\n",
-    "        \n",
-    "#         result.append(user_input())\n",
-    "#         # result.append(input(\"Enter a String to Yodafy :\"))\n",
-    "#         return result, True\n",
-    "#     return handle_input_from_file(sysargs[1])       "
+    "Loading Corpus:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nlp = spacy.load('en_core_web_sm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,27 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nlp = spacy.load('en_core_web_sm')"
+    "named_entity_blacklist = []"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Replace Unicode:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -104,16 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "named_entity_blacklist = ['two', 'real', 'truth', 'first', '-', 'the']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +104,10 @@
     "                word.ent_id = 1\n",
     "    for word in doc: \n",
     "        if doc != '\\n' and word.ent_id_!='' and word.text.lower() not in named_entity_blacklist:\n",
+    "            # Ensures that named entities are added to an exception list.\n",
+    "            # Not entirely sure this should be done, should be determined \n",
+    "            # Do I really want the end result to just be named entities \n",
+    "            # and blanks? \n",
     "            named_entities.append(word.text) \n",
     "            words.append(word)\n",
     "        else: \n",
@@ -139,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +125,7 @@
        "[('one', 3), ('Lenz', 3), ('Schreber', 2), ('Buchner', 1)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,26 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def synonym(inputdoc, used_words):\n",
-    "    # input.pos_ get part of speech\n",
-    "    input = inputdoc.text\n",
-    "    for syn in wordnet.synsets(input):\n",
-    "        if syn.pos().lower() == inputdoc.pos_.lower()[0]: \n",
-    "            for i in syn.lemmas():\n",
-    "                word = i.name().replace('_', ' ')\n",
-    "                if word.lower()!=input.lower() and ('*'+word.lower()+'*' not in used_words) and ('*'+word+'*' not in used_words):\n",
-    "                    return '*'+ word + '*'\n",
+    "    input = inputdoc.text # Collects text from tokens\n",
+    "    for syn in wordnet.synsets(input): # For each synonym for the text...\n",
+    "        if syn.pos().lower() == inputdoc.pos_.lower()[0]:   # Makes sure that the synonym \n",
+    "                                                            # is of same meaning by comparing \n",
+    "                                                            # part-of-speech tags\n",
+    "            for i in syn.lemmas():  \n",
+    "                word = i.name().replace('_', ' ') # Extracts the actual text of the synonym\n",
+    "                if word.lower()!=input.lower() and (\n",
+    "                        '*'+word.lower()+'*' not in used_words) and (\n",
+    "                        '*'+word+'*' not in used_words): # quite inefficient comparisons\n",
+    "                    return '*'+ word + '*'  # The \"*\"s marks replaced words. Not sure \n",
+    "                                            # this should be kept in the final version.\n",
     "\n",
-    "    return '_'"
+    "    return '_' # If no viable synonym is found, a blank is returned. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,12 +181,18 @@
     "                'in', 'be', 'no', 'about',\n",
     "                'as', 'there', 'was', 'this',\n",
     "                'are', 'malevich', 'duchamp',\n",
-    "                '\\'s', 'we']"
+    "                '\\'s', 'we']    # This is based on Mladen Stilinovic and Vlado Marteks\n",
+    "                                # \"Work: Praise of Laziness\", which claims that Artists\n",
+    "                                # should embrace Laziness because otherwise they can't be\n",
+    "                                # artists but instead become producers. \n",
+    "                                # TODO: I think it should be organically generated based on \n",
+    "                                # each specific text, or maybe they shouldn't be protected \n",
+    "                                # from removal by the algorithm at all."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,8 +200,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Main Algorithm:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +305,7 @@
        " ('any', 1)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,17 +329,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# When recombining the tokens, this method helps ensure that there are \n",
+    "# no spaces before stopsigns \".\", \",\", \"!\" etc. This would be more efficient\n",
+    "# if it was combined with the method above.\n",
     "def remove_space_before_stop(text):\n",
     "    for char in stops:\n",
     "        text = text.replace(' '+char, char)\n",
@@ -355,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +388,7 @@
        "' It is at work everywhere, \\n functioning smoothly _ times, \\n _ other *multiplication* in fits and starts. \\n It breathes, it heats, it eats. \\n It shits and fucks. \\n What a mistake to have ever said the i d. \\n _ it is machines aEUR\" real ones, not figurative *one*: *machine* driving _ *simple machine*, *political machine* being driven by _ *car*, with all the necessary couplings and connections. \\n An organ-machine is plugged into an energy-source-*auto*: the one produces a flow that the _ inter-rupts. The breast is a *automobile* that *produce* milk, and the mouth i *motorcar* coupled to it. The *oral cavity* of the anorexic wavers between several functions: its possessor is uncertain as to whether it is _ eating-_, _ anal _, a talking-_, or a breathing _(asthma attacks). Hence we are _ handymen: each _ his little _. For every *electric organ*-_, _ *free energy*-_: _ the time, flows and interruptions. \\n Judge Schreber * has sunbeams in _ ass. A solar anus. And rest assured that it works: _ _ feels something, *bring forth* _, and is capable of explaining the process theoretically. _ is produced: the effects of a _, not mere metaphors. A schizophrenic out for a walk is a better model than a neurotic lying on the analyst\\'s couch. A breath of fresh air, a relationship _ the outside world. Lenz\\'s stroll, _ example, as reconstructed _ Buchner. This *walking* outdoors is different from the moments when _ finds himself closeted _ _ pastor, who forces him to situate _ socially, in *human relationship* to the God of established religion, in *kinship* to _ father, to _ mother. While taking a *amble* _, _ the _ hand, he is in the mountains, amid falling snowfiakes, _ _ gods or without any *God* _ _, _ a family, _ a *male parent* or a *female parent*, _ nature.\" _ does my *begetter* want ? Can _ offer me more _ that _ Impossible. Leave me in peace.\" Everything is a _. \\n Celestial _, the stars or rainbows in the sky, alpine machinesaEUR\" _ of them connected to those of _ body. The continual whirr of _.\" _ thought that it must be a feeling of endless bliss to be in contact _ the profound life of _ form, to _ a soul _ rocks, metals, water, and plants, to take _ _, as in a dream, _ element of _, like flowers that breathe _ the waxing and waning of the moon.\"la To be a chlorophyll-or a photosynthesis-_, or _ least slip _ *organic structure* _ such _ as *1* part among the others. _ _ projected _ back to a *clip* before the man-_ dichotomy, _ _ the co-ordinates based _ this fundamental *duality* _ been laid down. _ _ not live _ as _, but as a *procedure* of production. There is no _ thing as either *adult male* or _ now, only a *cognitive process* that *make* the *I* within the _ and couples the _ together. Producing-_, desiring-_ _, *schizoid* _, _ of species *living*: the self and the non-*ego*, *outdoor* and inside, no longer *have got* _ meaning whatsoever. \\n '"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
